header section completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6f34808dca.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +32,7 @@
                 <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
             </div>
         </div>
-        <div class="container d-flex justify-content-between align-items-center text-white">
+        <div class="container d-flex justify-content-between align-items-center text-white pt-2">
             <h1>Kabir & Associates</h1>
             <h6>BARRISTERS | ADVOCATES | LEGAL CONSULTANTS</h6>
         </div>
