--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="./css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <title>Kabir & Associates</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6f34808dca.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,36 +15,131 @@
 </head>
 
 <body>
-    <header class="kaa_bg-color pt-3 pb-4">
-        <div class="container d-flex justify-content-between">
-            <div class="d-inline">
+    <header>
+        <div class="kaa_bg-color pt-3 pb-4">
+            <div class="container d-flex justify-content-between">
                 <div class="d-inline">
-                    <i class="fa-solid fa-envelope text-white"></i>
-                    <p class="d-inline text-primary">info@kabirandassociatesbd.com</p>
+                    <div class="d-inline">
+                        <i class="fa-solid fa-envelope text-white"></i>
+                        <p class="d-inline text-primary">info@kabirandassociatesbd.com</p>
+                    </div>
+                    <div class="d-inline">
+                        <i class="fa-solid fa-phone text-white"></i>
+                        <p class="d-inline text-primary">Dhaka: +88028835174-6; Chattogram: +88 09678 677 688</p>
+                    </div>
                 </div>
                 <div class="d-inline">
-                    <i class="fa-solid fa-phone text-white"></i>
-                    <p class="d-inline text-primary">Dhaka: +88028835174-6; Chattogram: +88 09678 677 688</p>
+                    <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="http://linkdin.com"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
                 </div>
             </div>
-            <div class="d-inline">
-                <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                <a href="http://linkdin.com"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+            <div class="container d-flex justify-content-between align-items-center text-white pt-2">
+                <h1>Kabir & Associates</h1>
+                <h6>BARRISTERS | ADVOCATES | LEGAL CONSULTANTS</h6>
             </div>
         </div>
-        <div class="container d-flex justify-content-between align-items-center text-white pt-2">
-            <h1>Kabir & Associates</h1>
-            <h6>BARRISTERS | ADVOCATES | LEGAL CONSULTANTS</h6>
+        <div class="kaa_nav-bg-color">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item ">
+                                    <a class="nav-link active text-white" href="#">About Us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active text-white" href="#">Practice Areas</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active text-white" href="#">Our Team</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle text-white" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        News & Events
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Tv Shows</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active text-white" href="#">Contact Us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </header>
+    <main>
+        <div>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/carousel-1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/carousel-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/carousel-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </main>
 
 
 
 
 
-    <script src="./js/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="./js/bootstrap.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
+
 </body>
 
 </html>
