Law Practise Section Added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!--=============================== Header section start=============================== -->
     <header>
         <div class="kaa_bg-color pt-3 pb-4">
             <div class="container d-flex justify-content-between">
@@ -39,6 +40,7 @@
                 <h6>BARRISTERS | ADVOCATES | LEGAL CONSULTANTS</h6>
             </div>
         </div>
+        <!--====================== navbar section start ================= -->
         <div class="kaa_nav-bg-color">
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
@@ -80,8 +82,11 @@
                 </nav>
             </div>
         </div>
+        <!--====================== navbar section end ================= -->
     </header>
+    <!--=============================== Header section end=============================== -->
     <main>
+        <!--============================ Carousel Start ============================== -->
         <div>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -127,6 +132,164 @@
                 </button>
             </div>
         </div>
+        <!--============================ Carousel End ============================== -->
+        <!--============================ Legal Counsel Section Start ============================== -->
+        <div class="bg-light pb-5">
+            <div class="container pt-5 px-5 mb-5">
+                <h1 class="text-center">Legal Counsel</h1>
+                <hr class="w-25 mx-auto">
+                <p><b>LEGAL COUNSEL</b> is one of the leading firms of Bangladesh having its main office located at the
+                    heart of the Dhaka City and another branch at the port city of Chattogram. Our firm is distinguished
+                    by its competence, wide range of experiences, creativity and the success that we have enjoyed in our
+                    chosen areas of practice.</p>
+                <p>We have a reputation for providing exceptional legal services & are renowned for our commitment to
+                    excellence and for our ability to find innovative solutions to complex and unique legal problems.
+                    Our efforts have been recognized and highly valued by our wide ranging and ever increasing client
+                    base. At Legal Counsel, we focus on:</p>
+                <ul>
+                    <li>Nurturing the special nature of the firm: a collegiate working style with an ambition to be the
+                        best at looking after clients, bringing creative, quality and business-aware approach to our
+                        work, however complex it might be.</li>
+                    <li>Fostering and developing: our working relationships with leading law firms across the world.
+                    </li>
+                    <li>Maintaining a sense of perspective: our clients are best served if an element of warmth and high
+                        degree of professionalism is in the mix.</li>
+                </ul>
+                <p>Whilst the broader economic environment is improving after a long down-turn in the wake of the global
+                    financial crisis, uncertainties remain and regulatory challenges are ever-present. Against this
+                    backdrop, we continue to focus on providing positive and constructive service to our clients and to
+                    draw strength from our multi-specialism and our creative and upbeat approach to dealing with novel
+                    situation.</p>
+            </div>
+            <div class="text-center">
+                <div class="btn btn-primary">Read More</div>
+            </div>
+        </div>
+        <!--================== Legal Counsel Section End ===================== -->
+        <!--================== Law Practise Area Section Start ===================== -->
+        <div class="container py-5 px-5">
+            <div class="text-center mb-5">
+                <h6>WHAT WE ARE EXPERT AT</h6>
+                <h1>Legal Practice Areas</h1>
+                <hr class="w-25 mx-auto">
+            </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center p-4 shadow">
+                        <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><b>Foreign Investments</b></h5>
+                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                                another via long term participation by one country into the ownership stakes of domestic
+                            </p>
+                            <div class="btn btn-primary">Learn More</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="mt-5 text-center">
+                <div class="btn btn-primary">VIEW MORE</div>
+            </div>
+
+        </div>
+        <!--================== Law Practise Area Section end ===================== -->
     </main>
 
 
