help section added

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
                         <p class="d-inline text-primary">Dhaka: +88028835174-6; Chattogram: +88 09678 677 688</p>
                     </div>
                 </div>
-                <div class="d-inline">
-                    <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="http://linkdin.com"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+                <div class="text-center">
+                    <a href="http://facebook.com" target="_blank"><img src="./icons/002-facebook.png" alt=""
+                            class="social-icon-width"></a>
+                    <a href="http://linkdin.com" target="_blank"><img src="./icons/001-linkedin.png" alt=""
+                            class="social-icon-width"></a>
+                    <a href="http://instagram.com" target="_blank"><img src="./icons/003-instagram.png" alt=""
+                            class="social-icon-width"></a>
                 </div>
             </div>
             <div class="container d-flex justify-content-between align-items-center text-white pt-2">
@@ -162,7 +165,7 @@
                     situation.</p>
             </div>
             <div class="text-center">
-                <div class="btn btn-primary">Read More</div>
+                <div class="btn btn-color shadow">Read More</div>
             </div>
         </div>
         <!--================== Legal Counsel Section End ===================== -->
@@ -182,7 +185,7 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -194,7 +197,7 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -206,7 +209,7 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -218,7 +221,7 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -230,7 +233,7 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -242,7 +245,7 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -254,7 +257,7 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -266,7 +269,7 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -278,18 +281,78 @@
                             <p class="card-text">Foreign investment refers to the flow of capital from one nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
-                            <div class="btn btn-primary">Learn More</div>
+                            <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
                         </div>
                     </div>
                 </div>
 
             </div>
             <div class="mt-5 text-center">
-                <div class="btn btn-primary">VIEW MORE</div>
+                <div class="btn btn-color shadow">VIEW MORE</div>
             </div>
 
         </div>
         <!--================== Law Practise Area Section end ===================== -->
+        <!--================== How Can We Help Section Start ===================== -->
+        <div class="d-flex">
+            <div class="how-can-we-help">
+                <div class="d-flex">
+                    <div>
+                        <img src="./icons/001-certificate.png" alt="">
+                    </div>
+                    <div>
+                        <h3>Legal Service</h3>
+                        <p>We are a full-service law firm proficient in providing commendable legal services in a
+                            timely and professional manner. Our core practice areas include Labor and Employment
+                            Law, Contract Law, Business Law and Commercial Law, Corporate Law and Company Law,
+                            Family Law, Foreign Direct Investment, Taxation, Telecommunication and ICT Law, Banking
+                            law, Corporate Governance and Compliance, Property Law, Alternative Dispute Resolution
+                            (ADR), etc. Our team includes leading practitioners in specialist areas including Tax,
+                            Real Estate, Information Technology, Telecom and others. Our extensive and meaningful
+                            relationships with other market leading firms provide a client focused international
+                            service.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div>
+                        <img src="./icons/002-file.png" alt="">
+                    </div>
+                    <div>
+                        <h3>Legal Service</h3>
+                        <p>We are a full-service law firm proficient in providing commendable legal services in a
+                            timely and professional manner. Our core practice areas include Labor and Employment
+                            Law, Contract Law, Business Law and Commercial Law, Corporate Law and Company Law,
+                            Family Law, Foreign Direct Investment, Taxation, Telecommunication and ICT Law, Banking
+                            law, Corporate Governance and Compliance, Property Law, Alternative Dispute Resolution
+                            (ADR), etc. Our team includes leading practitioners in specialist areas including Tax,
+                            Real Estate, Information Technology, Telecom and others. Our extensive and meaningful
+                            relationships with other market leading firms provide a client focused international
+                            service.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div>
+                        <img src="./icons/003-website-design.png" alt="">
+                    </div>
+                    <div>
+                        <h3>Legal Service</h3>
+                        <p>We are a full-service law firm proficient in providing commendable legal services in a
+                            timely and professional manner. Our core practice areas include Labor and Employment
+                            Law, Contract Law, Business Law and Commercial Law, Corporate Law and Company Law,
+                            Family Law, Foreign Direct Investment, Taxation, Telecommunication and ICT Law, Banking
+                            law, Corporate Governance and Compliance, Property Law, Alternative Dispute Resolution
+                            (ADR), etc. Our team includes leading practitioners in specialist areas including Tax,
+                            Real Estate, Information Technology, Telecom and others. Our extensive and meaningful
+                            relationships with other market leading firms provide a client focused international
+                            service.</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="./images/Corporate-law-1.jpg" alt="">
+            </div>
+        </div>
+        <!--================== How Can We Help Section end ===================== -->
     </main>
 
 
