counter section completed

--- a/index.html
+++ b/index.html
@@ -295,7 +295,9 @@
         <!--================== Law Practise Area Section end ===================== -->
         <!--================== How Can We Help Section Start ===================== -->
         <div class="d-flex">
-            <div class="how-can-we-help">
+            <div class="col-6 how-can-we-help text-white">
+                <h1>How Can We Help?</h1>
+                <hr>
                 <div class="d-flex">
                     <div>
                         <img src="./icons/001-certificate.png" alt="">
@@ -348,11 +350,38 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <img src="./images/Corporate-law-1.jpg" alt="">
+            <div class="col-6 right-img">
+
             </div>
         </div>
         <!--================== How Can We Help Section end ===================== -->
+        <!--================== Counter Section Start ===================== -->
+        <div class="bg-black py-5">
+            <div class="container d-flex justify-content-between text-white text-center">
+                <div>
+                    <h1>12,500+</h1>
+                    <p>Client Consultations</p>
+                </div>
+                <div>
+                    <h1>26</h1>
+                    <p>Client's countries of origin</p>
+                </div>
+                <div>
+                    <h1>16</h1>
+                    <p>Allied international law firms</p>
+                </div>
+                <div>
+                    <h1>1,000+</h1>
+                    <p>Pro bono hours</p>
+                </div>
+                <div>
+                    <h1>15+</h1>
+                    <p>Associates</p>
+                </div>
+
+            </div>
+        </div>
+        <!--================== Counter Section end ===================== -->
     </main>
 
 
