address section added

--- a/index.html
+++ b/index.html
@@ -566,6 +566,49 @@
             </div>
         </div>
         <!--================== Form Section end ===================== -->
+        <!--================== Address Section Start ===================== -->
+        <div class="address-section py-5">
+            <h1 class="text-white text-center">Kabir & Associates</h1>
+            <hr class="w-100 hr-white">
+            <div class="row px-5">
+                <div class="col-3 text-white p-4">
+                    <h3>Dhaka Office</h3>
+                    <p><i class="fa-solid fa-location-dot"></i> Momtaz Vision, (Suite – B4, Level 2), House-11/A,
+                        Road-99, Gulshan-2, Dhaka-1212, Bangladesh.</p>
+                    <p><i class="fa-solid fa-phone"></i> Telephone: +88028835174-6</p>
+                    <p><i class="fa-solid fa-fax"></i> Fax: +88028835176</p>
+                    <p><i class="fa-solid fa-envelope"></i> info@kabirandassociatesbd.com</p>
+                </div>
+                <div class="col-3 text-white p-4">
+                    <h3>Dhaka Office</h3>
+                    <p><i class="fa-solid fa-location-dot"></i> Momtaz Vision, (Suite – B4, Level 2), House-11/A,
+                        Road-99, Gulshan-2, Dhaka-1212, Bangladesh.</p>
+                    <p><i class="fa-solid fa-phone"></i> Telephone: +88028835174-6</p>
+                    <p><i class="fa-solid fa-fax"></i> Fax: +88028835176</p>
+                    <p><i class="fa-solid fa-envelope"></i> info@kabirandassociatesbd.com</p>
+                </div>
+                <div class="col-3 text-white p-4">
+                    <h3>Useful Links</h3>
+                    <a href="http://bdlaws.minlaw.gov.bd/laws-of-bangladesh.html" target="_blank"><i
+                            class="fa-solid fa-link"></i> Laws Of Bangladesh</a><br>
+                    <a href="http://bdlaws.minlaw.gov.bd/laws-of-bangladesh.html" target="_blank"><i
+                            class="fa-solid fa-link"></i> Laws Of Bangladesh</a><br>
+                    <a href="http://bdlaws.minlaw.gov.bd/laws-of-bangladesh.html" target="_blank"><i
+                            class="fa-solid fa-link"></i> Laws Of Bangladesh</a><br>
+                    <a href="http://bdlaws.minlaw.gov.bd/laws-of-bangladesh.html" target="_blank"><i
+                            class="fa-solid fa-link"></i> Laws Of Bangladesh</a><br>
+                    <a href="http://bdlaws.minlaw.gov.bd/laws-of-bangladesh.html" target="_blank"><i
+                            class="fa-solid fa-link"></i> Laws Of Bangladesh</a>
+                </div>
+                <div class="col-3">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.917853479986!2d90.38483261536267!3d23.750308594695824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8bb2e4f5763%3A0x4b2a37bf0137fb1f!2sConcept%20Tower!5e0!3m2!1sen!2sbd!4v1661526246994!5m2!1sen!2sbd"
+                        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+        <!--================== Address Section end ===================== -->
     </main>
 
 
