--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <a class="nav-link active text-white" href="about-us.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="#">Practice Areas</a>
+                                    <a class="nav-link active text-white" href="practise-areas.html">Practice Areas</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active text-white" href="#">Our Team</a>
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/supreme court 01.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="./images/supreme-court-01.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption d-none d-md-block text-center">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
